--- a/android/quest/build.gradle
+++ b/android/quest/build.gradle
@@ -16,6 +16,15 @@ sonar {
         property "sonar.projectKey", "fhircore"
         property "sonar.kotlin.source.version", "1.5"
         property "sonar.androidLint.reportPaths","${project.buildDir}/reports/lint-results-questDebug.xml"
+        property "sonar.host.url", "https://sonarqube.fhir.onalabs.org"
+        property "sonar.login", System.getenv("SONAR_TOKEN")
+        property "sonar.sourceEncoding", "UTF-8"
+        property "sonar.exclusions", '**/*Test*/**,' +
+                '**/*test*/**,' +
+                '**/.gradle/**,' +
+                '**/R.class' +
+                '*.json,' +
+                '*.yaml,'
     }
 }
 
