--- a/android/build.gradle
+++ b/android/build.gradle
@@ -21,6 +21,7 @@ buildscript {
         classpath deps.kotlin_coveralls_plugin
         classpath deps.junit5_plugin
         classpath "com.android.tools.build:gradle:7.1.3"
+        classpath "org.owasp:dependency-check-gradle:8.1.2"
     }
 }
 
@@ -40,6 +41,7 @@ allprojects {
         maven {
             url 'https://jcenter.bintray.com/'
         }
+        apply plugin: 'org.owasp.dependencycheck'
     }
 }
 
