--- a/.github/workflows/dependency-check.yml
+++ b/.github/workflows/dependency-check.yml
@@ -28,13 +28,13 @@ jobs:
         with:
           java-version: 11
 
-      - name: Grant execute permission for gradlew
-        run: chmod +x gradlew
-        working-directory: android
+      # - name: Grant execute permission for gradlew
+      #   run: chmod +x gradlew
+      #   working-directory: android
 
-      - name: Build Gradle project
-        run: ./gradlew build
-        working-directory: android
+      # - name: Build Gradle project
+      #   run: ./gradlew build
+      #   working-directory: android
 
       - name: Run Dependency Check
         uses: dependency-check/Dependency-Check_Action@main
