--- a/android/quest/build.gradle
+++ b/android/quest/build.gradle
@@ -8,6 +8,7 @@ plugins {
     id 'jacoco'
     id 'dagger.hilt.android.plugin'
     id 'androidx.navigation.safeargs'
+    id "io.sentry.android.gradle" version "3.5.0"
     id "org.sonarqube" version "3.5.0.2730"
 }
 
@@ -43,6 +44,7 @@ android {
         buildConfigField("String", 'OAUTH_SCOPE', "\"${OAUTH_SCOPE}\"")
         buildConfigField("boolean", 'GEOWIDGET_ENABLED', "$geowidgetEnabled")
         buildConfigField("String", "CONFIGURATION_SYNC_PAGE_SIZE", "\"100\"")
+        buildConfigField("String", "SENTRY_DSN", "\"" + getProps("sentry.dsn") + "\"")
 
         testInstrumentationRunner "org.smartregister.fhircore.quest.QuestTestRunner"
     }
