--- a/.github/workflows/dependency-check.yml
+++ b/.github/workflows/dependency-check.yml
@@ -24,31 +24,40 @@ jobs:
           fetch-depth: 0
 
       - name: Set up JDK
-        uses: actions/setup-java@v1
+        uses: actions/setup-java@v3
         with:
           java-version: 11
+          distribution: temurin
 
-      # - name: Grant execute permission for gradlew
-      #   run: chmod +x gradlew
-      #   working-directory: android
+      - name: Setup Gradle
+        uses: gradle/gradle-build-action@v2
 
-      # - name: Build Gradle project
-      #   run: ./gradlew build
-      #   working-directory: android
+      - name: Grant execute permission for gradlew
+        run: chmod +x gradlew
+        working-directory: android
+
+      - name: Build Gradle project
+        run: ./gradlew build
+        working-directory: android
 
       - name: Run Dependency Check
-        uses: dependency-check/Dependency-Check_Action@main
-        env:
-          JAVA_HOME: /opt/jdk
-        with:
-          project: "fhircore"
-          path: "."
-          format: 'XML'
-          out: 'reports'
+        run: ./gradlew dependencyCheckAnalyze
+        working-directory: android
+
+
+      # - name: Run Dependency Check
+      #   uses: dependency-check/Dependency-Check_Action@main
+      #   env:
+      #     JAVA_HOME: /opt/jdk
+      #   with:
+      #     project: "fhircore"
+      #     path: "."
+      #     format: 'XML'
+      #     out: 'reports'
         
 
       - name: Upload Dependency Check report in XML format
         uses: actions/upload-artifact@v2
         with:
           name: dependency-check-report
-          path: dependency-check-report.xml
+          path: android/reports/dependency-check-report.xml
