Fix SonarQube workflow failing build on CI (#2291)
* Change variant to Debug

* Update sonarqube.yml

* Add lintQuestDebug gradle task for explicit lint report generation

* Add cancel workflow step to cancel any previous runs per PR branch

* Specify Android Lint Report Path

* Update build.gradle

Kotlin src version to 1.5

* Update SonarQube configuration

---------

Co-authored-by: Peter Lubell-Doughtie <peter@ona.io>

--- a/android/quest/build.gradle
+++ b/android/quest/build.gradle
@@ -15,6 +15,17 @@ plugins {
 sonar {
     properties {
         property "sonar.projectKey", "fhircore"
+        property "sonar.kotlin.source.version", "1.5"
+        property "sonar.androidLint.reportPaths","${project.buildDir}/reports/lint-results-questDebug.xml"
+        property "sonar.host.url", "https://sonarqube.fhir.onalabs.org"
+        property "sonar.login", System.getenv("SONAR_TOKEN")
+        property "sonar.sourceEncoding", "UTF-8"
+        property "sonar.exclusions", '**/*Test*/**,' +
+                '**/*test*/**,' +
+                '**/.gradle/**,' +
+                '**/R.class' +
+                '*.json,' +
+                '*.yaml,'
     }
 }
 
