Test Gradle commands
Signed-off-by: Bonface Shisakha Asunga <basunga@ona.io>

--- a/.github/workflows/dependency-check.yml
+++ b/.github/workflows/dependency-check.yml
@@ -37,7 +37,7 @@ jobs:
         working-directory: android
 
       - name: Build Gradle project
-        run: ./gradlew build
+        run: ./gradlew check --scan
         working-directory: android
 
       - name: Run Dependency Check
