--- a/.github/workflows/dependency-check.yml
+++ b/.github/workflows/dependency-check.yml
@@ -29,15 +29,12 @@ jobs:
           java-version: 11
           distribution: temurin
 
-      - name: Setup Gradle
-        uses: gradle/gradle-build-action@v2
-
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
         working-directory: android
 
       - name: Build Gradle project
-        run: ./gradlew check --scan
+        run: ./gradlew build
         working-directory: android
 
       - name: Run Dependency Check
