Comment Build step
Signed-off-by: Bonface Shisakha Asunga <basunga@ona.io>

--- a/.github/workflows/dependency-check.yml
+++ b/.github/workflows/dependency-check.yml
@@ -33,9 +33,9 @@ jobs:
         run: chmod +x gradlew
         working-directory: android
 
-      - name: Build Gradle project
-        run: ./gradlew build
-        working-directory: android
+      # - name: Build Gradle project
+      #   run: ./gradlew build
+      #   working-directory: android
 
       - name: Run Dependency Check
         run: ./gradlew dependencyCheckAnalyze
