--- a/.github/workflows/dependency-check.yml
+++ b/.github/workflows/dependency-check.yml
@@ -35,8 +35,20 @@ jobs:
         working-directory: android
 
       - name: Run Dependency Check
-        run: ./gradlew dependencyCheckAggregate -DdependencyCheckFormat=HTML
+        run: ./gradlew dependencyCheckAggregate 
         working-directory: android
+
+      - name: Install Dependency Check CLI
+        run: |
+          wget https://github.com/jeremylong/DependencyCheck/releases/download/v8.2.1/dependency-check-8.2.1-release.zip
+          unzip dependency-check-8.2.1-release.zip
+
+      - name: Convert XML report to HTML
+        run: |
+          cd dependency-check/bin
+          ./dependency-check.sh --project android --scan . --format "HTML"
+        working-directory: android
+
 
 
       # - name: Run Dependency Check
@@ -50,8 +62,8 @@ jobs:
       #     out: 'reports'
         
 
-      - name: Upload Dependency Check report in XML format
+      - name: Upload Dependency Check report in HTML format
         uses: actions/upload-artifact@v2
         with:
           name: dependency-check-report
-          path: android/build/reports/dependency-check/index.html
+          path: dependency-check-report.html
