--- a/.github/workflows/dependency-check.yml
+++ b/.github/workflows/dependency-check.yml
@@ -12,6 +12,13 @@ on:
       - security-automation-additions
   workflow_dispatch:
     # inputs:    
+env:
+  FHIR_BASE_URL: ${{secrets.FHIR_BASE_URL}}
+  OAUTH_BASE_URL: ${{secrets.OAUTH_BASE_URL}}
+  OAUTH_CIENT_ID: ${{secrets.OAUTH_CIENT_ID}}
+  OAUTH_CLIENT_SECRET: ${{secrets.OAUTH_CLIENT_SECRET}}
+  OAUTH_SCOPE: ${{secrets.OAUTH_SCOPE}}
+  MAPBOX_SDK_TOKEN: ${{secrets.MAPBOX_SDK_TOKEN}}
 
 jobs:
   dependency-check:
@@ -34,26 +41,26 @@ jobs:
         working-directory: android
 
       - name: Run Dependency Check
-        run: ./gradlew dependencyCheckAggregate 
-        working-directory: android
-        env:
-          FHIR_BASE_URL: ${{secrets.FHIR_BASE_URL}}
-          OAUTH_BASE_URL: ${{secrets.OAUTH_BASE_URL}}
-          OAUTH_CIENT_ID: ${{secrets.OAUTH_CIENT_ID}}
-          OAUTH_CLIENT_SECRET: ${{secrets.OAUTH_CLIENT_SECRET}}
-          OAUTH_SCOPE: ${{secrets.OAUTH_SCOPE}}
-          MAPBOX_SDK_TOKEN: ${{secrets.MAPBOX_SDK_TOKEN}}
+        run: |
+          cd android
+          ./gradlew dependencyCheckAggregate 
+
+      - name: Upload Dependency Check report in HTML format
+        uses: actions/upload-artifact@v2
+        with:
+          name: dependency-check-report
+          path: dependency-check-report.xml
+        
 
       - name: Install Dependency Check CLI
         run: |
           wget https://github.com/jeremylong/DependencyCheck/releases/download/v8.2.1/dependency-check-8.2.1-release.zip
           unzip dependency-check-8.2.1-release.zip
-        working-directory: android
 
       - name: Convert XML report to HTML
         run: |
           cd dependency-check/bin
-          ./dependency-check.sh --project "fhircore" --scan "android" --format "HTML"
+          ./dependency-check.sh --project "fhircore" --scan "../android" --format "HTML"
         working-directory: android
 
 
