--- a/android/properties.gradle
+++ b/android/properties.gradle
@@ -1,17 +1,17 @@
 //FHIR CORE CREDENTIALS
 ext.props = new Properties()
 
-def fhirAuthArray = ["FHIR_BASE_URL", "OAUTH_BASE_URL", "OAUTH_CIENT_ID", "OAUTH_CLIENT_SECRET", "OAUTH_SCOPE", "MAPBOX_SDK_TOKEN"]
+def fhirAuthArray = ["FHIR_BASE_URL", "OAUTH_BASE_URL", "OAUTH_CIENT_ID", "OAUTH_CLIENT_SECRET", "OAUTH_SCOPE", "MAPBOX_SDK_TOKEN", "SENTRY_DSN"]
 if (rootProject.file("local.properties").exists()) {
     props.load(rootProject.file("local.properties").newDataInputStream())
 
-    fhirAuthArray.each { prop ->
-        project.ext.set(prop, props.getProperty(prop, (prop == "FHIR_BASE_URL") ? "https://sample.url/fhir/" : "sample"))
+    fhirAuthArray.each { propertyKey ->
+        project.ext.set(propertyKey, props.getProperty(propertyKey, (propertyKey == "FHIR_BASE_URL") ? "https://sample.url/fhir/" : "sample"))
     }
 } else {
     println("local.properties does not exist. The following values are required " + fhirAuthArray.join(", "))
-    fhirAuthArray.each { prop ->
-        project.ext.set(prop, props.getProperty(prop, (prop.contains("URL")) ? "https://sample.url/fhir/" : "sample_" + prop))
+    fhirAuthArray.each { propertyKey ->
+        project.ext.set(propertyKey, props.getProperty(propertyKey, (propertyKey.contains("FHIR_BASE_URL")) ? "https://sample.url/fhir/" : "sample_" + propertyKey))
     }
 }
 
@@ -20,12 +20,12 @@ def keystoreAuthArray = ["KEYSTORE_ALIAS", "KEY_PASSWORD", "KEYSTORE_PASSWORD"]
 if (rootProject.file("keystore.properties").exists()) {
     props.load(rootProject.file("keystore.properties").newDataInputStream())
 
-    keystoreAuthArray.each { arrayProp ->
-        project.ext.set(arrayProp, props.getProperty(arrayProp, "sample"))
+    keystoreAuthArray.each { propertyKey ->
+        project.ext.set(propertyKey, props.getProperty(propertyKey, "sample"))
     }
 } else {
     println("keystore.properties does not exist. The following values are required " + keystoreAuthArray.join(", "))
-    keystoreAuthArray.each { arrayProp ->
-        project.ext.set(arrayProp, props.getProperty(arrayProp, "sample_" + arrayProp))
+    keystoreAuthArray.each { propertyKey ->
+        project.ext.set(propertyKey, props.getProperty(propertyKey, "sample_" + propertyKey))
     }
 }
