Practitioner based report (#2317)
* Practitioner based report

* UI Changes and refactor

* Update workflow library

* Rename properties to subject and refactor the UI

* Fix tests | Fix merge issues | Refactor

* Rename test variables

* Fix ui tests

* Update android/quest/src/main/java/org/smartregister/fhircore/quest/ui/report/measure/screens/ReportTypeSelectorScreen.kt

Co-authored-by: Peter Lubell-Doughtie <peter@ona.io>

* Update android/engine/src/main/java/org/smartregister/fhircore/engine/util/extension/ResourceExtension.kt

Co-authored-by: Peter Lubell-Doughtie <peter@ona.io>

* spotless apply

* spotless apply

* Fix failing test

---------

Co-authored-by: Benjamin Mwalimu <dubdabasoduba@gmail.com>
Co-authored-by: Peter Lubell-Doughtie <peter@ona.io>

--- a/android/quest/src/main/assets/configs/app/sync_config.json
+++ b/android/quest/src/main/assets/configs/app/sync_config.json
@@ -45,6 +45,16 @@
         "name": "_id",
         "code": "_id",
         "base": [
+          "Practitioner"
+        ]
+      }
+    },
+    {
+      "resource": {
+        "resourceType": "SearchParameter",
+        "name": "_id",
+        "code": "_id",
+        "base": [
           "Library"
         ]
       },
