Fix initial expression computation (Refactoring) (#2327)
* Fix initial expression computation by bypassing some checks of QuestionnaireType Default

* Revert deleting hidden extension from the questionnaire item

* Fixed removing initial expression when prepopulationparams linkID matches with the questionnaire item linkID

* revert QuestionnaireType to be DEFAULT if not set

* used EDIT QuestionnaireType when using initial expression in questionnaire

* removed removing initial expression extension

* removed uncessary code

* added questionnaireType edit property on household profile when launching questionnaire

* remove extra line break

* remove unused import

* WIP Fixing initial expression forms by injecting the required resources needed in the expression

* Consumed resourceId & resourceType from questionnaireConfig to load the patient resource when needed

* removed uncessary code edits

* spotless ran

* test fix

* added test

* run spotless on tests

* fixed tests

* resolved feedback

* removed unused methods

* exception handling on populateresources method

* Resolved conflict

* spotless ran

* fixed typo on tests after merging branch

---------

Co-authored-by: pld <peter@ona.io>
Co-authored-by: Martin Ndegwa <ndegwamartin@users.noreply.github.com>

--- a/android/quest/src/main/assets/configs/app/profiles/default_profile_config.json
+++ b/android/quest/src/main/assets/configs/app/profiles/default_profile_config.json
@@ -1061,8 +1061,10 @@
                         "questionnaire": {
                           "id": "@{taskQuestionnaireId}",
                           "title": "@{taskDescription}",
+
                           "saveButtonText": "Save",
                           "taskId": "@{taskId}",
+                          "resourceType": "Patient",
                           "resourceIdentifier": "@{taskFor}"
                         },
                         "params": [
@@ -1330,6 +1332,7 @@
                         "questionnaire": {
                           "id": "@{taskQuestionnaireId}",
                           "title": "@{taskDescription}",
+
                           "saveButtonText": "Save",
                           "taskId": "@{taskId}",
                           "resourceIdentifier": "@{taskFor}"
@@ -1450,6 +1453,7 @@
                         "questionnaire": {
                           "id": "@{taskQuestionnaireId}",
                           "title": "@{taskDescription}",
+
                           "saveButtonText": "Save",
                           "taskId": "@{taskId}",
                           "resourceIdentifier": "@{taskFor}"
@@ -1570,6 +1574,7 @@
                         "questionnaire": {
                           "id": "@{taskQuestionnaireId}",
                           "title": "@{taskDescription}",
+
                           "saveButtonText": "Save",
                           "taskId": "@{taskId}",
                           "resourceIdentifier": "@{taskFor}"
@@ -1690,6 +1695,7 @@
                         "questionnaire": {
                           "id": "@{taskQuestionnaireId}",
                           "title": "@{taskDescription}",
+
                           "saveButtonText": "Save",
                           "taskId": "@{taskId}",
                           "resourceIdentifier": "@{taskFor}"
@@ -1810,6 +1816,7 @@
                         "questionnaire": {
                           "id": "@{taskQuestionnaireId}",
                           "title": "@{taskDescription}",
+
                           "saveButtonText": "Save",
                           "taskId": "@{taskId}",
                           "resourceIdentifier": "@{taskFor}"
@@ -1930,6 +1937,7 @@
                         "questionnaire": {
                           "id": "@{taskQuestionnaireId}",
                           "title": "@{taskDescription}",
+
                           "saveButtonText": "Save",
                           "taskId": "@{taskId}",
                           "resourceIdentifier": "@{taskFor}"
@@ -2049,6 +2057,7 @@
                         "workflow": "LAUNCH_QUESTIONNAIRE",
                         "questionnaire": {
                           "id": "@{taskQuestionnaireId}",
+
                           "title": "@{taskDescription}",
                           "saveButtonText": "Save",
                           "taskId": "@{taskId}",
@@ -2170,6 +2179,7 @@
                         "questionnaire": {
                           "id": "@{taskQuestionnaireId}",
                           "title": "@{taskDescription}",
+
                           "saveButtonText": "Save",
                           "taskId": "@{taskId}",
                           "resourceIdentifier": "@{taskFor}"
