--- a/android/quest/src/main/assets/configs/app/registers/child_register_config.json
+++ b/android/quest/src/main/assets/configs/app/registers/child_register_config.json
@@ -3,6 +3,15 @@
   "configType": "register",
   "id": "childRegister",
   "pageSize": 20,
+  "configRules": [
+    {
+      "name": "under5",
+      "condition": "true",
+      "actions": [
+        "data.put('under5', dateService.addOrSubtractYearFromCurrentDate(5,'-'))"
+      ]
+    }
+  ],
   "fhirResource": {
     "baseResource": {
       "resource": "Patient",
@@ -12,7 +21,7 @@
           "filterCriteria": [
             {
               "dataType": "DATE",
-              "valueDate": "2017-03-14",
+              "computedRule": "under5",
               "prefix": "GREATERTHAN_OR_EQUALS"
             }
           ]
