--- a/android/quest/src/mpower/assets/configs/app/profiles/household_profile_config.json
+++ b/android/quest/src/mpower/assets/configs/app/profiles/household_profile_config.json
@@ -52,7 +52,8 @@
             "sortConfigs": [
               {
                 "paramName": "period",
-                "dataType": "DATE"
+                "dataType": "DATE",
+                "order": "DESCENDING"
               }
             ]
           },
@@ -384,6 +385,20 @@
                     ]
                   },
                   {
+                    "name": "taskExecutionStartDate",
+                    "condition": "true",
+                    "actions": [
+                      "data.put('taskExecutionStartDate', fhirPath.extractValue(size(Task) > 0 ? Task.get(0) : null, 'Task.executionPeriod.start'))"
+                    ]
+                  },
+                  {
+                    "name": "taskScheduleDate",
+                    "condition": "true",
+                    "actions": [
+                      "data.put('taskScheduleDate', service.formatDate(data.get('taskExecutionStartDate'), \"yyyy-MM-dd'T'HH:mm:ss.SSS'Z'\", \"yyyy-MM-dd\"))"
+                    ]
+                  },
+                  {
                     "name": "taskFor",
                     "condition": "true",
                     "actions": [
@@ -543,7 +558,16 @@
                             "saveButtonText": "Save",
                             "taskId": "@{taskId}",
                             "resourceIdentifier": "@{taskFor}"
-                          }
+                          },
+                          "params": [
+                            {
+                              "paramType": "PREPOPULATE",
+                              "linkId": "ae2f17cb-deff-48a6-8ece-27e6bd475f30",
+                              "dataType": "DATE",
+                              "key": "taskScheduleDate",
+                              "value": "@{taskScheduleDate}"
+                            }
+                          ]
                         }
                       ]
                     },
