--- a/android/quest/src/main/assets/configs/app/profiles/household_profile_config.json
+++ b/android/quest/src/main/assets/configs/app/profiles/household_profile_config.json
@@ -110,6 +110,7 @@
             "id": "e5155788-8831-4916-a3f5-486915ce34b2",
             "title": "Add household member",
             "saveButtonText": "Add Member",
+            "type" : "CREATED",
             "resourceType": "Patient",
             "groupResource": {
               "groupIdentifier": "@{familyLogicalId}",
