--- a/android/properties.gradle
+++ b/android/properties.gradle
@@ -11,7 +11,7 @@ if (rootProject.file("local.properties").exists()) {
 } else {
     println("local.properties does not exist. The following values are required " + fhirAuthArray.join(", "))
     fhirAuthArray.each { propertyKey ->
-        project.ext.set(propertyKey, props.getProperty(propertyKey, (propertyKey.contains("FHIR_BASE_URL")) ? "https://sample.url/fhir/" : "sample_" + propertyKey))
+        project.ext.set(propertyKey, props.getProperty(propertyKey, (propertyKey.contains("URL")) ? "https://sample.url/fhir/" : "sample_" + propertyKey))
     }
 }
 
