--- a/android/properties.gradle
+++ b/android/properties.gradle
@@ -5,13 +5,13 @@ def fhirAuthArray = ["FHIR_BASE_URL", "OAUTH_BASE_URL", "OAUTH_CIENT_ID", "OAUTH
 if (rootProject.file("local.properties").exists()) {
     props.load(rootProject.file("local.properties").newDataInputStream())
 
-    fhirAuthArray.each { propertyKey ->
-        project.ext.set(propertyKey, props.getProperty(propertyKey, (propertyKey == "FHIR_BASE_URL") ? "https://sample.url/fhir/" : "sample"))
+    fhirAuthArray.each { localPropertyKey ->
+        project.ext.set(localPropertyKey, props.getProperty(localPropertyKey, (localPropertyKey == "FHIR_BASE_URL") ? "https://sample.url/fhir/" : "sample"))
     }
 } else {
     println("local.properties does not exist. The following values are required " + fhirAuthArray.join(", "))
     fhirAuthArray.each { propertyKey ->
-        project.ext.set(propertyKey, props.getProperty(propertyKey, (propertyKey.contains("FHIR_BASE_URL")) ? "https://sample.url/fhir/" : "sample_" + propertyKey))
+        project.ext.set(propertyKey, props.getProperty(propertyKey, (propertyKey.contains("URL")) ? "https://sample.url/fhir/" : "sample_" + propertyKey))
     }
 }
 
@@ -20,8 +20,8 @@ def keystoreAuthArray = ["KEYSTORE_ALIAS", "KEY_PASSWORD", "KEYSTORE_PASSWORD"]
 if (rootProject.file("keystore.properties").exists()) {
     props.load(rootProject.file("keystore.properties").newDataInputStream())
 
-    keystoreAuthArray.each { propertyKey ->
-        project.ext.set(propertyKey, props.getProperty(propertyKey, "sample"))
+    keystoreAuthArray.each { keystorePropertyKey ->
+        project.ext.set(keystorePropertyKey, props.getProperty(keystorePropertyKey, "sample"))
     }
 } else {
     println("keystore.properties does not exist. The following values are required " + keystoreAuthArray.join(", "))
