--- a/android/properties.gradle
+++ b/android/properties.gradle
@@ -1,9 +1,11 @@
 //FHIR CORE CREDENTIALS
 ext.props = new Properties()
 
+def localPropertiesFilePath = project.hasProperty("localPropertyFile") ? project.getProperty("localPropertyFile") : "local.properties"
+
 def fhirAuthArray = ["FHIR_BASE_URL", "OAUTH_BASE_URL", "OAUTH_CIENT_ID", "OAUTH_CLIENT_SECRET", "OAUTH_SCOPE", "MAPBOX_SDK_TOKEN", "SENTRY_DSN"]
-if (rootProject.file("local.properties").exists()) {
-    props.load(rootProject.file("local.properties").newDataInputStream())
+if (rootProject.file(localPropertiesFilePath).exists()) {
+    props.load(rootProject.file(localPropertiesFilePath).newDataInputStream())
 
     fhirAuthArray.each { localPropertyKey ->
         project.ext.set(localPropertyKey, props.getProperty(localPropertyKey, (localPropertyKey == "FHIR_BASE_URL") ? "https://sample.url/fhir/" : "sample"))
@@ -15,10 +17,12 @@ if (rootProject.file("local.properties").exists()) {
     }
 }
 
+def keystorePropertiesFilePath = project.hasProperty("keystorePropertyFile") ? project.getProperty("keystorePropertyFile") :"keystore.properties"
+
 //KEYSTORE CREDENTIALS
 def keystoreAuthArray = ["KEYSTORE_ALIAS", "KEY_PASSWORD", "KEYSTORE_PASSWORD"]
-if (rootProject.file("keystore.properties").exists()) {
-    props.load(rootProject.file("keystore.properties").newDataInputStream())
+if (rootProject.file(keystorePropertiesFilePath).exists()) {
+    props.load(rootProject.file(keystorePropertiesFilePath).newDataInputStream())
 
     keystoreAuthArray.each { keystorePropertyKey ->
         project.ext.set(keystorePropertyKey, props.getProperty(keystorePropertyKey, "sample"))
