change git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -29,5 +29,5 @@ captures/
 .fleet/
 .docusaurus/
 android/quest/src/main/assets/configs/*
+android/quest/echis/debug/*
 !android/quest/src/main/assets/configs/app
-
