--- a/android/quest/src/mpower/assets/configs/app/composition_config.json
+++ b/android/quest/src/mpower/assets/configs/app/composition_config.json
@@ -282,7 +282,7 @@
         {
           "title": "Remove Family",
           "focus": {
-            "reference": "Questionnaire/0259e181-581e-4b4c-8409-e3be3a166ef5",
+            "reference": "Questionnaire/454",
             "identifier": {
               "value": "remove-family"
             }
@@ -292,7 +292,7 @@
         {
           "title": "Remove Family Member",
           "focus": {
-            "reference": "Questionnaire/7f1960ac-81b5-42a2-8813-97222de5745a",
+            "reference": "Questionnaire/1158",
             "identifier": {
               "value": "remove-family-member"
             }
