--- a/android/quest/build.gradle
+++ b/android/quest/build.gradle
@@ -146,10 +146,8 @@ android {
     flavorDimensions "apps"
 
     productFlavors {
-        quest {
+        opensrp {
             dimension "apps"
-            applicationIdSuffix ".quest"
-            versionNameSuffix "-quest"
             getIsDefault().set(true)
         }
 
