Update Patient Profile

--- a/android/quest/src/mpower/assets/configs/app/profiles/household_profile_config.json
+++ b/android/quest/src/mpower/assets/configs/app/profiles/household_profile_config.json
@@ -417,7 +417,7 @@
                     "condition": "true",
                     "priority": 2,
                     "actions": [
-                      "data.put('showMemberTasks', data.get('patientActive') == 'true' && size(Task) > 0)"
+                      "data.put('showMemberTasks', data.get('patientActive') == 'true' && size(service.filterResources(Task, 'Task.status!=\"completed\"')) > 0)"
                     ]
                   },
                   {
