Update Family Profile

--- a/android/quest/src/mpower/assets/configs/app/profiles/default_profile_config.json
+++ b/android/quest/src/mpower/assets/configs/app/profiles/default_profile_config.json
@@ -84,6 +84,10 @@
             "reference": "@{patientProfileIcon}"
           },
           {
+            "viewType": "SPACER",
+            "width": 10
+          },
+          {
             "viewType": "COLUMN",
             "backgroundColor": "primaryColor",
             "children": [
